# wya

./: README.md  ddl_file.txt  home_page.html  home_page_2.html  home_page_3.html  login_page.html  login_page_2.html  pyproject.toml  wya_basic_frame.html  wya_main.py  wya_tests.py
